--- a/src/index.html
+++ b/src/index.html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>goit-js-hw-11</title>
-    <link rel="stylesheet" href="./css/styles.css" />
-  </head>
-  <body>
-    <main>
-      <form class="form">
-        <label>
-          <input
-            type="text"
-            name="search-text"
-            placeholder="Search images..."
-            required
-          />
-        </label>
-        <button type="submit">Search</button>
-      </form>
-      <span class="loader hidden"></span>
-      <ul class="gallery"></ul>
-    </main>
-    <script type="module" src="./main.js"></script>
-  </body>
+<html lang="uk">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Image Search</title>
+  <link rel="stylesheet" href="./css/styles.css">
+</head>
+
+<body>
+  <form class="form">
+    <input type="text" name="searchQuery" placeholder="Search images..." required />
+    <button type="submit">Search</button>
+  </form>
+
+  <div class="loader-backdrop is-hidden">
+    <span class="loader"></span>
+  </div>
+
+  <ul class="gallery"></ul>
+
+  <script type="module" src="./main.js"></script>
+</body>
+
 </html>
